# unicpp

./: .drone.yml  .gitignore  BUILD.bazel  README.md  WORKSPACE  char_type.h  unicode_data.cpp  unicode_data.h
.github/workflows/: build.yml
tests/: BUILD.bazel  char_type_test.cpp  utf16_test.cpp  utf8_test.cpp
tests/data/: BUILD.bazel  utf8_text.txt
unicpp/: BUILD.bazel  char_type.cpp  char_type.h  unicode_data.cpp  unicode_data.h  utf16.cpp  utf16.h  utf8.cpp  utf8.h  utf_common.h
utils/: unicode_data_generator.py
