load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "char_type_test",
    srcs = ["char_type_test.cpp"],
    deps = [
        "//unicpp:char_type",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "utf8_test",
    srcs = ["utf8_test.cpp"],
    data = ["//tests/data:utf8_text_static_file"],
    deps = [
        "//unicpp:utf8",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "utf16_test",
    srcs = ["utf16_test.cpp"],
    deps = [
        "//unicpp:utf16",
        "@googletest//:gtest_main",
    ],
)
