load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "char_type",
    srcs = ["char_type.cpp"],
    hdrs = ["char_type.h"],
    deps = [":unicode_data"],
)

cc_library(
    name = "unicode_data",
    srcs = ["unicode_data.cpp"],
    hdrs = ["unicode_data.h"],
)

cc_library(
    name = "utf_common",
    hdrs = ["utf_common.h"],
)

cc_library(
    name = "utf8",
    srcs = ["utf8.cpp"],
    hdrs = ["utf8.h"],
    deps = [":utf_common"],
)

cc_library(
    name = "utf16",
    hdrs = ["utf16.h"],
    deps = [":utf_common"],
)
